# kb-mod-monitor

./: Cargo.toml  Justfile  README.md  ioctl-wrapper.c  ioctl-wrapper.h  main.c  meson.build
src/: client.rs  device.rs  inotify.rs  key.rs  main.rs  server.rs  state.rs  xkb_state.rs
src/keyboard/: diff.rs  mod.rs  state.rs
src/xkb_state/: callbacks.rs  mod.rs
systemd/: caps-lock-daemon.service  kb-mod-monitor.service  meson.build
